RESOLVED FIXED20360
MIME type parameters break <video> and <audio> elements
https://bugs.webkit.org/show_bug.cgi?id=20360
Summary MIME type parameters break <video> and <audio> elements
Eric Carlson
Reported 2008-08-12 09:08:18 PDT
A MIME type can have various parameters after the type which add extra meaning, but WebKit doesn't deal with them. Open http://hsivonen.iki.fi/test/moz/video-selection/source-mp4-ogg-params.html, which contains: <video controls autoplay> <source src='html5-test.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'> <source src='html5-test.ogg' type='application/ogg; codecs="theora, vorbis"'> FAIL: This is fallback text. </video> In Safari, WebKit should display 'html5-test.mp4', but it does not because the MIME type registry doesn't match 'video/mp4; codecs="avc1.42E01E, mp4a.40.2"'.
Attachments
Patch to strip parameters from the MIME type before checking with the type registry (2.22 KB, patch)
2008-08-12 09:14 PDT, Eric Carlson
no flags
Revised patch (3.29 KB, patch)
2008-08-12 09:59 PDT, Eric Carlson
adele: review+
Eric Carlson
Comment 1 2008-08-12 09:14:20 PDT
Created attachment 22749 [details] Patch to strip parameters from the MIME type before checking with the type registry
Eric Carlson
Comment 2 2008-08-12 09:19:45 PDT
Adele Peterson
Comment 3 2008-08-12 09:19:52 PDT
Comment on attachment 22749 [details] Patch to strip parameters from the MIME type before checking with the type registry You've got some tabs in the patch- you should replace those with spaces. You also want to generate and checkin results for the test, and make a ChangeLog entry for the LayoutTests directory.
Eric Carlson
Comment 4 2008-08-12 09:59:57 PDT
Created attachment 22751 [details] Revised patch
Adele Peterson
Comment 5 2008-08-13 16:51:16 PDT
Committed revision 35729.
Note You need to log in before you can comment on or make changes to this bug.