WebCore:

2008-08-13  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adele Peterson.

        Fix for <rdar://problem/6137931>
        https://bugs.webkit.org/show_bug.cgi?id=20360
        Remove all parameters from the MIME type before checking with the MIME type registry

        Tests: media/video-source-type-params.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::pickMedia): only pass the portion before the first ';'
        to isSupportedMediaMIMEType()

LayoutTests:

2008-08-13  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/6137931>
        https://bugs.webkit.org/show_bug.cgi?id=20360
        Add test case for parameters on a <source> element 'type' attribute.

        * media/video-source-type-params-expected.txt: Added.
        * media/video-source-type-params.html: Added.



Canonical link: https://commits.webkit.org/28138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35729 268f45cc-cd09-0410-ab3c-d52691b4dbfc