WebCore/html/HTMLMediaElement.cpp
@@ -819,7 +819,13 @@ String HTMLMediaElement::pickMedia()
                         continue;
                 }
                 if (source->hasAttribute(typeAttr)) {
-                    String type = source->type();
+                    String type = source->type().stripWhiteSpace();
+
+                    // "type" can have parameters after a semi-colon, strip them before checking with the type registry
+                    int semi = type.find(';');
+                    if (-1 != semi)
+                        type = type.left(semi).stripWhiteSpace();
+
                     if (!MIMETypeRegistry::isSupportedMediaMIMEType(type))
                         continue;
                 }
